# api_progen

./: .env  .gitignore  Cargo.toml  README.md  build.toml  diesel.toml
.github/workflows/: rust.yml
migrations/2020-05-20-130137_init_database/: down.sql  up.sql
migrations/2020-08-05-092425_user_and_role/: down.sql  up.sql
src/: main.rs
src/controller/: login_controller.rs  mod.rs  place_controller.rs  random_controller.rs
src/database/: db_pool.rs  mod.rs  schema.rs
src/database/dto/: city.rs  country.rs  mod.rs  place.rs  role.rs  user.rs
src/database/infra/: connection_builder.rs  db_pool.rs  entities_handlers.rs  mod.rs  repository.rs
src/database/repository/: city_repository.rs  country_repository.rs  mod.rs  place_repository.rs  role_repository.rs  user_repository.rs
src/router/: login_router.rs  mod.rs  parking_router.rs
src/service/: authentication_service.rs  city_service.rs  mod.rs  place_service.rs  random_service.rs  token_service.rs
